<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="?android:selectableItemBackground">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/imageViewCategory"
        android:src="@drawable/ic_build_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/category" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCategory"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_alignBottom="@+id/imageViewCategory"
        android:layout_alignLeft="@+id/textViewClientAddress"
        android:layout_alignStart="@+id/textViewClientAddress" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/imageViewClientAddress"
        android:src="@drawable/ic_location_on_black_24dp"
        android:contentDescription="@string/client_address"
        android:layout_below="@+id/imageViewCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewClientAddress"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_above="@+id/imageViewDate"
        android:layout_alignLeft="@+id/textViewDate"
        android:layout_alignStart="@+id/textViewDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDate"
        android:layout_alignBottom="@+id/imageViewDate"
        android:layout_toRightOf="@+id/imageViewDate"
        android:layout_toEndOf="@+id/imageViewDate"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_marginLeft="5dp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/imageViewDate"
        android:src="@drawable/ic_today_black_24dp"
        android:layout_below="@+id/imageViewClientAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/date" />


</RelativeLayout>
