<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="?android:selectableItemBackground">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/imageViewCategoryMyApp"
        android:src="@drawable/ic_build_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/category" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCategoryMyApp"
        android:layout_alignBottom="@+id/imageViewCategoryMyApp"
        android:layout_toRightOf="@+id/imageViewCategoryMyApp"
        android:layout_toEndOf="@+id/imageViewCategoryMyApp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/imageViewClientAddressMyApp"
        android:src="@drawable/ic_location_on_black_24dp"
        android:contentDescription="@string/client_address"
        android:layout_below="@+id/imageViewCategoryMyApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewClientAddressMyApp"
        android:layout_alignBottom="@+id/imageViewDateMyApp"
        android:layout_alignLeft="@+id/textViewDateMyApp"
        android:layout_alignStart="@+id/textViewDateMyApp"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDateMyApp"
        android:layout_above="@+id/imageViewDateMyApp"
        android:layout_alignLeft="@+id/textViewCategoryMyApp"
        android:layout_alignStart="@+id/textViewCategoryMyApp"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/imageViewDateMyApp"
        android:src="@drawable/ic_today_black_24dp"
        android:layout_below="@+id/imageViewClientAddressMyApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/date" />


</RelativeLayout>
